# discord-transfermarkt-bot

./: .gitignore  README.md  main.py  pyproject.toml
src/transfermarkt_bot/data_pipeline/: orchestrator.py
src/transfermarkt_bot/data_pipeline/analysis/: view_countries.py
src/transfermarkt_bot/data_pipeline/loaders/: clubs.py  competitions.py  players.py
src/transfermarkt_bot/data_pipeline/scrapers/: clubs.py  competitions.py  players.py
