[project]
name = "transfermarkt-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "pandas>=2.3.3",
    "pyarrow>=22.0.0",
    "requests>=2.32.5",
]

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
viz = [
    "geopandas>=1.1.2",
    "matplotlib>=3.10.8",
    "plotly>=6.5.0",
]
